[tool.black]
line-length = 88
target-version = ['py38']
include = '\.py$'
exclude = '''
(
  /(
      \.
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | \.idea
    | \.cache
    | bin
    | config
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "stop-the-vcr"
version = "0.1.0"
description = "A package that contains VCR.py custom request matchers"
authors = ["Alex Cornelio <ascornelio@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8.1"
vcrpy = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
